[project]
requires-python = ">=3.12"
name = "oralb-io"
version = "0.1.0"

description="CLI to interact with Oral-B brushes."
authors = [
  { name="MatrixEditor", email="not@supported.com" },
]
readme = "README.md"
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',

    'Programming Language :: Python :: 3.12',
  ]

[project.urls]
"Homepage" = "https://github.com/MatrixEditor/oralb-io"

[project.scripts]
oralbcli = "oralb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oralb*"]

[tool.setuptools.package-data]
"*" = ["*.pem"]